# Chocolate

./: .gitignore  Dockerfile  Dockerfile_amd  Dockerfile_base  Dockerfile_nvidia  README.md  app.py  config.ini  convert.py  docker-compose.yml  intro.py  licence.md  licence.txt  movieServer.py  pyproject.toml  requirements.txt  rewrite.py  rpc.py  scannedFiles.json  serieServer.py  test.py
.github/workflows/: codacy.yml  pysa.yml
chocolate/: __init__.py
src/chocolate/: __init__.py  __main__.py  config.ini  convert.py  intro.py  scans.py  tables.py
src/chocolate/routes/: arr.py  libraries.py  settings.py  users.py
src/chocolate/static/lang/: af.json  am.json  ar.json  az.json  be.json  bg.json  bn.json  bs.json  ca.json  de.json  en.json  es.json  fr.json  hi.json  hr.json  hu.json  it.json  languages.json  nl.json  ny.json  ro.json  sq.json  zh.json
src/chocolate/utils/: utils.py
src/chocolate_app/: __init__.py  __main__.py  convert.py  empty_config.ini  scans.py  send_languages_to_weblate.py  tables.py
src/chocolate_app/intro/: intro_detection.py
src/chocolate_app/intro/rcd/: __init__.py  detector.py  evaluation.py  featurevectors.py  video_functions.py
src/chocolate_app/plugins_loader/: FrontEndRebuilder.py  events.py  inject_html.py  loader.py  overrides.py  routes.py
src/chocolate_app/routes/: arr.py  libraries.py  settings.py  users.py
src/chocolate_app/routes/api/: auth.py  index.py  libraries.py  medias.py  profil.py  settings.py  watch.py
src/chocolate_app/static/: asset-manifest.json  index.html  manifest.json
src/chocolate_app/static/assets/: index-7-noNo3N.js  index-B0MXNsox.js  index-BKdyyttN.js  index-C5JChcNU.js  index-CMWFoLd4.js  index-CWA6KQ42.css  index-C_UvJbaX.css  index-DiReV362.js  index-Ds5cxdaf.js  index-LHnflZbQ.js  index-l4QvSCFY.js
src/chocolate_app/static/bios/: readme.txt
src/chocolate_app/static/css/: main.949e4fd8.css  main.949e4fd8.css.map  main.c1eb532d.css  main.c1eb532d.css.map  main.f29ded19.css  main.f29ded19.css.map  main.fed688d5.css  main.fed688d5.css.map
src/chocolate_app/static/js/: 787.02296961.chunk.js  787.51bfdf11.chunk.js  787.51bfdf11.chunk.js.map  main.0d795be6.js  main.0ec79dbd.js  main.1066297b.js  main.1066297b.js.LICENSE.txt  main.5c48bcf2.js  main.5c48bcf2.js.LICENSE.txt  main.7605bddd.js  main.7605bddd.js.LICENSE.txt  main.e69b0e0e.js  main.e69b0e0e.js.LICENSE.txt  reactPlayerDailyMotion.9c4534e8.chunk.js  reactPlayerDailyMotion.9c4534e8.chunk.js.map  reactPlayerFacebook.65d1e685.chunk.js  reactPlayerFacebook.65d1e685.chunk.js.map  reactPlayerFilePlayer.a2532adb.chunk.js  reactPlayerFilePlayer.a2532adb.chunk.js.map  reactPlayerKaltura.d433f239.chunk.js  reactPlayerKaltura.d433f239.chunk.js.map  reactPlayerMixcloud.b1821f64.chunk.js  reactPlayerMixcloud.b1821f64.chunk.js.map  reactPlayerMux.edf0ec49.chunk.js  reactPlayerMux.edf0ec49.chunk.js.map  reactPlayerPreview.446fd5be.chunk.js  reactPlayerPreview.446fd5be.chunk.js.map  reactPlayerSoundCloud.a1a9c55b.chunk.js  reactPlayerSoundCloud.a1a9c55b.chunk.js.map  reactPlayerStreamable.3828b65a.chunk.js  reactPlayerStreamable.3828b65a.chunk.js.map  reactPlayerTwitch.69ff4fc4.chunk.js  reactPlayerTwitch.69ff4fc4.chunk.js.map  reactPlayerVidyard.4b07b6f2.chunk.js  reactPlayerVidyard.4b07b6f2.chunk.js.map  reactPlayerVimeo.2399e3ec.chunk.js  reactPlayerVimeo.2399e3ec.chunk.js.map  reactPlayerWistia.c60f5197.chunk.js  reactPlayerWistia.c60f5197.chunk.js.map  reactPlayerYouTube.050c9fbe.chunk.js  (+1 more)
src/chocolate_app/static/lang/: am.json  ar.json  az.json  bs.json  co.json  cs.json  da.json  de.json  (+13 more)
src/chocolate_app/templates/: index (copy).html  index.html
src/chocolate_app/utils/: utils.py
static/: manifest.json
static/css/: main.d5b854d8.css  main.d5b854d8.css.map  style.css
static/img/mediaImages/: readme.txt
static/js/: 787.02296961.chunk.js.map  actor.js  allFilms.js  allSeries.js  channel.js  consoles.js  createAccount.js  editMovie.js  game.js  games.js  homeFilms.js  homeSeries.js  login.js  main.48bedb54.js  main.js  movie.js  movies.js  other.js  otherVideo.js  profil.js  season.js  serie.js  service-worker.js  settings.js  tv.js
static/js/videoJS/: silvermine-videojs-airplay.js  silvermine-videojs-chromecast.js  videojs-hls-quality-selector.js  videojs-http-source-selector.js  videojs.hotkeys.js
static/lang/: languages.json
templates/: actor.html  allFilms.html  allSeries.html  channel.html  consoles.html  createAccount.html  editMovie.html  film.html  films.html  game.html  games.html  header.html  homeFilms.html  homeSeries.html  index.html  login.html  offline.html  other.html  otherVideo.html  popup.html  profil.html  season.html  serie.html  settings.html  tv.html
