[project]
name = "chocolate_app"
version = "8.0.2"
description = ""
authors = [{ name = "Imprevisible", email = "impr.visible@gmail.com" }]
dependencies = [
    "colorama==0.4.5",
    "deep-translator==1.10.1",
    "Flask==2.2.2",
    "Flask-Cors==3.0.10",
    "flask-login==0.6.2",
    "flask-sqlalchemy==3.0.3",
    "get-video-properties==0.1.1",
    "GitPython==3.1.31",
    "GPUtil==1.4.0",
    "guessit==3.7.1",
    "ImageHash==4.3.1",
    "opencv-python==4.5.5.64",
    "Pillow==9.5.0",
    "pyarr==5.0.0",
    "pycountry==22.3.5",
    "PyPDF2==3.0.1",
    "pypresence==4.2.1",
    "python-Levenshtein==0.20.9",
    "rarfile==4.0",
    "SQLAlchemy==1.4.45",
    "Unidecode==1.3.6",
    "Werkzeug==2.2.2",
    "deezer-python>=6.1.0",
    "tinytag>=1.9.0",
    "argparse>=1.4.0",
    "EbookLib>=0.18",
    "flask-migrate>=4.0.4",
    "tmdbv3api>=1.9.0",
    "natsort>=8.4.0",
    "PyMuPdf>=1.22.5",
    "pyyaml>=6.0.1",
    "jsbeautifier>=1.15.1",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "matplotlib>=3.8.3",
    "dtw>=1.4.0",
    "audio-similarity==1.0.0",
    "faiss-cpu>=1.8.0",
    "ffmpeg>=1.4",
    "pandas>=2.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = ["black>=23.7.0"]

[project.scripts]
chocolate_app = "chocolate_app.__main__:start_chocolate"

[tool.pdm.scripts]
chocolate_app = "chocolate_app.__main__:start_chocolate"
