[project]
name = "chocolate_app"
version = "9.1.0"
description = ""
authors = [
    { name = "Imprevisible", email = "impr.visible@gmail.com" },
    { name = "Impre-visible", email = "impr.visible@gmail.com" },
]
dependencies = [
    "colorama==0.4.5",
    "deep-translator==1.10.1",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "get-video-properties==0.1.1",
    "GitPython==3.1.31",
    "GPUtil==1.4.0",
    "guessit==3.7.1",
    "ImageHash==4.3.1",
    "opencv-python==4.5.5.64",
    "Pillow==9.5.0",
    "pyarr==5.0.0",
    "pycountry==22.3.5",
    "PyPDF2==3.0.1",
    "pypresence==4.2.1",
    "python-Levenshtein==0.20.9",
    "rarfile==4.0",
    "sqlalchemy==2.0.32",
    "Unidecode==1.3.6",
    "Werkzeug==3.0.4",
    "deezer-python>=6.1.0",
    "tinytag>=1.9.0",
    "argparse>=1.4.0",
    "EbookLib>=0.18",
    "flask-migrate>=4.0.4",
    "tmdbv3api>=1.9.0",
    "natsort>=8.4.0",
    "PyMuPdf>=1.22.5",
    "pyyaml>=6.0.1",
    "jsbeautifier>=1.15.1",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "matplotlib>=3.8.3",
    "dtw>=1.4.0",
    "audio-similarity==1.0.0",
    "faiss-cpu>=1.8.0",
    "ffmpeg>=1.4",
    "pandas>=2.2.1",
    "PyJWT>=2.9.0",
    "m3u-parser>=0.4.1",
    "jinja2==3.1.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = ["black>=23.7.0"]

[project.scripts]
chocolate_app = "chocolate_app.__main__:start_chocolate"

[tool.pdm.scripts]
chocolate_app = "chocolate_app.__main__:start_chocolate"
